test/negative/invariant2.mli.expected

*******************************
********** Parsed file ********
*******************************
type t =
  | A 
  | B [@@gospel {| invariant 1 >= 0 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type t =
| A 
| B 
  (*@ invariant ...
       *)
File "invariant2.mli", line 1, characters 0-48:
Error: Invariant on public type `t'.
